--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 # for employee-front
+employee-front/
 
 # Compiled output
 /employee-front/dist
