update for api dockerfile

--- a/employee-app/Dockerfile
+++ b/employee-app/Dockerfile
@@ -1,18 +1,17 @@
+FROM maven:3.8.2-openjdk-17 AS build
+
+WORKDIR /app
+
+# Copy the Maven project and build it
+COPY pom.xml .
+COPY src src/
+RUN mvn package -DskipTests
+
 FROM openjdk:17
 
 WORKDIR /app
 
-COPY target/Spring-docker-Employee.jar ./
-
-# Expose the port your Spring Boot application runs on
-# EXPOSE 8081
-
-# Define environment variables for MySQL connection
-# ENV SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/yourdb
-# ENV SPRING_DATASOURCE_USERNAME=root
-# ENV SPRING_DATASOURCE_PASSWORD=yourpassword
-# ENV SPRING_DATASOURCE_DRIVER-CLASS-NAME=com.mysql.cj.jdbc.Driver
-# ENV SPRING_JPA_HIBERNATE_DDL-AUTO=update
+COPY --from=build /app/target/Spring-docker-Employee.jar ./
 
 # Run the JAR file
 ENTRYPOINT ["java", "-jar", "Spring-docker-Employee.jar"]
