update docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     volumes:
       - frontend_vol:/usr/share/nginx/html
     build:
-      context: .
+      context: employee-ihm/
       dockerfile: Dockerfile
 
   registry:
