--- a/Projet_k8s/sublime_deployment.yml
+++ b/Projet_k8s/sublime_deployment.yml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: sublime-text-container
         image: rodriguez003/sublime-text:1.0
+        command: [ "sh", "-c", "sleep 300d" ]        
         env:
         - name: DISPLAY
           value: ":0"
