update mysql deployment

--- a/Projet_k8s/mysql-deployment.yml
+++ b/Projet_k8s/mysql-deployment.yml
@@ -14,7 +14,7 @@ spec:
           app: mysql
       spec:
         containers:
-          - name : mysqldb
+          - name : mysql
             image: mysql:5.7
             env:
               - name: MYSQL_ROOT_PASSWORD
