--- a/Projet_k8s/mysql-deployment.yml
+++ b/Projet_k8s/mysql-deployment.yml
@@ -40,15 +40,15 @@ spec:
             ports:
               - containerPort : 3306
             volumeMounts:
-              - name: data-mysql-volume
+              - name: mysql-persistent-storage
                 mountPath: /var/lib/mysql
               - name: secret-config
                 readOnly: true
                 mountPath: "/etc/secret-volume"
         volumes:
-          - name: data-mysql-volume
-            hostPath:
-              path: /data/mysql
+          - name: mysql-persistent-storage
+            persistentVolumeClaim:
+              claimName: mysql-pvc
           - name: secret-config
             secret:
               secretName: employee-secrets
