--- a/employee-ihm/Dockerfile
+++ b/employee-ihm/Dockerfile
@@ -11,6 +11,7 @@ RUN npm run build --prod
 FROM nginx:alpine
 
 COPY --from=node_stage /app/dist/crud-app /usr/share/nginx/html
+#COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 81
 
